// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <ErrorMessage /> rendering should render email error 1`] = `
<div
  className="field-errors"
>
  <div
    className="field-errors__item"
  />
  <div
    className="field-errors__item"
  >
    Het moet een geldig e-mailadres zijn
  </div>
  <div
    className="field-errors__item"
  />
</div>
`;

exports[`Form component <ErrorMessage /> rendering should render maxLength error 1`] = `
<div
  className="field-errors"
>
  <div
    className="field-errors__item"
  />
  <div
    className="field-errors__item"
  />
  <div
    className="field-errors__item"
  >
    Dit veld mag niet langer dan 666 characters zijn.
  </div>
</div>
`;

exports[`Form component <ErrorMessage /> rendering should render no error by default 1`] = `
<div
  className="field-errors"
>
  <div
    className="field-errors__item"
  />
  <div
    className="field-errors__item"
  />
  <div
    className="field-errors__item"
  />
</div>
`;

exports[`Form component <ErrorMessage /> rendering should render no error when element is only touched 1`] = `
<div
  className="field-errors"
>
  <div
    className="field-errors__item"
  />
  <div
    className="field-errors__item"
  />
  <div
    className="field-errors__item"
  />
</div>
`;

exports[`Form component <ErrorMessage /> rendering should render required error 1`] = `
<div
  className="field-errors"
>
  <div
    className="field-errors__item"
  >
    Dit is een verplicht veld
  </div>
  <div
    className="field-errors__item"
  />
  <div
    className="field-errors__item"
  />
</div>
`;
